[package]
name = "matchr"
version = "0.1.0"
edition = "2021"
authors = ["0l3d 0l3dgit@gmail.com"]
description = "A fast fuzzy matcher library written in Rust for use in CLI tools and TUI apps."
license = "MIT OR Apache-2.0"
repository = "https://github.com/0l3d/matchr"
keywords = ["fuzzy", "matcher", "cli", "rust"]
categories = ["text-processing", "command-line-utilities"]
readme = "README.md"

[lib]
name = "matchr"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
